exercise cpp  Frank's Carpet Cleaning Service

--- a/Hello World/Hello World.vcxproj
+++ b/Hello World/Hello World.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="constants.cpp" />
     <ClCompile Include="print size of variables.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
