--- a/Hello World/Hello World.vcxproj.filters
+++ b/Hello World/Hello World.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="print size of variables.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="constants.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
